# harnyx

./: .env.example  .gitignore  .ruff.toml  README.md  agent.py  pyproject.toml  request.json  test_query.json
commons/: pyproject.toml
commons/src/caster_commons/config/: observability.py  platform_api.py  subtensor.py
commons/src/caster_commons/domain/: claim.py
commons/src/caster_commons/llm/: pricing.py  provider.py
commons/src/caster_commons/observability/: logging.py  tracing.py
commons/src/caster_commons/sandbox/: docker.py
commons/src/caster_commons/tools/: desearch.py
commons/tests/infrastructure/llm/: test_vertex_provider.py
commons/tests/infrastructure/observability/: test_desearch_twitter_summary_log.py  test_logging_cloud_run_formatter.py
commons/tests/infrastructure/sandbox/: test_docker_manager.py  test_runtime.py
commons/tests/integration/sandbox/: seccomp_agent.py
commons/tests/integration/security/: attacker_agent.py
commons/tests/integration/tools/: test_desearch_ai_search_integration.py
miner/: AUTO-RESEARCH.md  Dockerfile  README.md  local-eval.md  prepare.py  program.md  pyproject.toml  train.py
miner/skills/: README.md
miner/skills/improve-artifact/: SKILL.md
miner/skills/prepare-benchmark-context/: SKILL.md
miner/skills/run-local-eval/: SKILL.md
miner/src/caster_miner/: app.py  dev.py
miner/src/caster_miner/context/: snapshot.py
miner/src/caster_miner/sandbox/: harness.py
miner/src/caster_miner/tools/: proxy.py
miner/src/harnyx_miner/: agent_source.py  dev.py  env.py  hash.py  local_benchmark.py  local_eval.py  platform_monitoring.py  submit.py
miner/tests/: docker_sandbox_entrypoint.py  test_agent_entrypoint.py  test_agent_source.py  test_autoresearch_format.py  test_context_snapshot.py  test_dev.py  test_hash.py  test_local_benchmark.py  test_local_eval.py  test_sandbox_harness.py  test_submit.py  test_tool_proxy.py
sandbox/: Dockerfile  README.md  pyproject.toml
sandbox/src/caster_sandbox/: app.py
sandbox/src/caster_sandbox/sandbox/: harness.py
sandbox/src/caster_sandbox/tools/: proxy.py
sandbox/src/harnyx_sandbox/: app.py
sandbox/src/harnyx_sandbox/sandbox/: harness.py  timeout.py
sandbox/tests/: test_app_auth.py  test_sandbox_harness.py  test_sandbox_tool_proxy.py  test_timeout.py
validator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
validator/src/caster_validator/: server.py
validator/src/caster_validator/application/: accept_batch.py  evaluate_criterion.py  evaluate_task_run.py  invoke_entrypoint.py  scheduler.py  status.py  submit_weights.py
validator/src/caster_validator/application/dto/: evaluation.py  weight.py
validator/src/caster_validator/application/ports/: claims.py  evaluation_record.py  platform.py  progress.py  subtensor.py
validator/src/caster_validator/application/providers/: claims.py
validator/src/caster_validator/application/services/: evaluation_batch.py  evaluation_batch_prep.py  evaluation_runner.py  evaluation_scoring.py
validator/src/caster_validator/domain/: agent.py  evaluation.py  exceptions.py  shared_config.py
validator/src/caster_validator/infrastructure/: parsers.py
validator/src/caster_validator/infrastructure/http/: routes.py  schemas.py
validator/src/caster_validator/infrastructure/scoring/: chutes_embedding.py  factory.py  vertex_embedding.py
validator/src/caster_validator/infrastructure/state/: batch_inbox.py  evaluation_record.py  run_progress.py
validator/src/caster_validator/infrastructure/subtensor/: bittensor.py  hotkey.py
validator/src/caster_validator/infrastructure/tools/: platform_client.py  repo_search_provider.py
validator/src/caster_validator/runtime/: agent_artifact.py  bootstrap.py  evaluation_worker.py  llm_factory.py  sandbox.py  settings.py  weight_worker.py
validator/src/harnyx_validator/: server.py  version.py
validator/src/harnyx_validator/application/: accept_batch.py  evaluate_task_run.py  invoke_entrypoint.py  scheduler.py  status.py  submit_weights.py
validator/src/harnyx_validator/infrastructure/: transient_network.py
validator/src/harnyx_validator/runtime/: agent_artifact.py  bootstrap.py  evaluation_worker.py  registration_metadata.py  resource_usage.py  settings.py  weight_worker.py
validator/tests/application/: test_accept_batch.py  test_application_orchestration.py  test_claims_provider.py  test_evaluate_criterion.py  test_evaluation_batch_service.py  test_evaluation_runner.py  test_evaluation_scoring.py  test_execute_tool.py  test_execute_tool_results.py  test_invoke_entrypoint.py  test_miner_task_dto.py  test_run_support_shutdown.py  test_scheduler.py  test_submit_weights.py
validator/tests/domain/: test_agent_registry.py  test_evaluation.py  test_miner_task.py  test_receipt_registry.py  test_token_policy.py  test_usage_tracker.py
validator/tests/fixtures/: fakes.py  subtensor.py
validator/tests/infrastructure/: test_registration_client.py  test_sentry.py  test_server_bootstrap.py  test_transient_network.py
validator/tests/infrastructure/http/: test_control_routes.py  test_local_tool_host.py  test_routes.py  test_system_routes.py
validator/tests/infrastructure/rpc/: test_server.py
validator/tests/infrastructure/scoring/: test_chutes_embedding.py
validator/tests/infrastructure/state/: test_evaluation_record.py  test_run_progress.py
validator/tests/infrastructure/subtensor/: test_bittensor_fetch_weight.py  test_bittensor_nonce_paths.py  test_client.py  test_hotkey_mnemonic.py
validator/tests/infrastructure/tools/: test_desearch.py  test_platform_client.py  test_repo_search_provider.py
validator/tests/integration/: conftest.py
validator/tests/integration/scoring/: test_evaluation_scoring_live.py
validator/tests/integration/subtensor/: test_runtime_client_live.py
validator/tests/runtime/: test_agent_artifact.py  test_batch_worker.py  test_bedrock_provider_wiring.py  test_bootstrap_scoring.py  test_inbound_platform_auth.py  test_registration_metadata.py  test_resource_usage.py  test_settings.py  test_tool_invoker.py  test_weight_worker.py
(+31 files in other folders)
