[project]
name = "caster-subnet-public-workspace"
version = "0.0.0"
description = "Workspace manifest for the public Caster Subnet packages."
requires-python = ">=3.11"
authors = [
  { name = "Caster Labs", email = "engineering@casterlabs.example" }
]
license = { text = "Proprietary" }
dependencies = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.3",
  "pytest-cov>=6.2.1",
]

[tool.uv.workspace]
members = ["commons", "validator", "miner", "miner-sdk"]

[tool.uv.sources]
caster-commons = { workspace = true }
caster-validator = { workspace = true }
caster-miner = { workspace = true }
caster-miner-sdk = { workspace = true }
