[project]
name = "caster-subnet-public-workspace"
version = "0.0.0"
description = "Workspace manifest for the public Caster Subnet packages."
requires-python = ">=3.11"
authors = [
  { name = "Brightmount", email = "dev@brightmount.co" }
]
license = { text = "Proprietary" }
dependencies = [
  "ruff>=0.5",
  "pytest>=8.3",
  "pytest-cov>=6.2.1",
  "vulture>=2.11",
  "deptry>=0.23",
]

[tool.uv.workspace]
members = [
  "packages/commons",
  "validator",
  "miner",
  "sandbox",
  "packages/miner-sdk",
]

[tool.uv.sources]
caster-commons = { workspace = true }
caster-validator = { workspace = true }
caster-miner = { workspace = true }
caster-miner-sdk = { workspace = true }
caster-sandbox = { workspace = true }
