[project]
name = "harnyx-sandbox"
version = "0.1.0"
description = "Sandbox runtime for executing miner entrypoints."
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Harnyx Labs", email = "engineering@harnyx.example" }
]
dependencies = [
  "fastapi>=0.110.1",
  "httpx>=0.27",
  "pyseccomp>=0.1.2",
  "uvicorn>=0.30",
  "harnyx-miner-sdk>=0.1.2",
]

[project.scripts]
harnyx-sandbox = "harnyx_sandbox.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harnyx_sandbox"]
