[project]
name = "caster-validator"
version = "0.1.0"
description = "Validator runtime for the Caster Subnet."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Caster Labs", email = "engineering@casterlabs.example" }
]
dependencies = [
  "pydantic>=2.8",
  "caster-commons>=0.1.0",
  "fastapi>=0.110.1",
  "uvicorn>=0.30",
  "bittensor==9.9.0",
  "pydantic-settings>=2.4",
]

[project.scripts]
caster-validator = "caster_validator.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "anthropic>=0.75.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caster_validator"]

[tool.deptry.package_module_name_map]
anthropic = "anthropic"
caster-commons = "caster_commons"
pydantic-settings = "pydantic_settings"
